Add STM32F405RG as target

--- a/projects.yaml
+++ b/projects.yaml
@@ -539,6 +539,10 @@ projects:
         - *module_if
         - *module_hic_stm32f103xb
         - records/board/stm32f401re.yaml
+    stm32f103xb_stm32f405rg_if:
+        - *module_if
+        - *module_hic_stm32f103xb
+        - records/board/stm32f405rg.yaml
     stm32f103xb_stm32f411re_if:
         - *module_if
         - *module_hic_stm32f103xb
